17.11.2012:
         * Improved: Deicsonze soft synthesizer: Fixed crash, bugs, added ladspa plugins. (Tim)
           TODO: No plugin control automation. Some oddities with log slider/entry ranges. Maybe add delay wet/dry.
15.11.2012:
         * Improved: Popup menus: Auto-breakup too-wide menus in class PopupMenu. (Tim)
           In some cases X/Qt was giving up if too wide AND/OR too many columns, menu would not appear.
           Tested OK with Deicsonze track info patch popup, and a synth plugin with > 2000 automation controls.
13.11.2012:
         - Fix init of gain for duplicated audiotracks (rj)
12.11.2012:
         - Added aftertouch controllers to all relevant remaining instrument files. (Tim)
         - Synths: Added aftertouch controller to fluidsynth, and aftertouch/poly-aftertouch to DSSI. (Tim)
11.11.2012:
         - Finished Aftertouch controllers: Removed PAfter and CAfter Event types. Quietly convert such
            events in old songs into the new controllers. Converted midi input (hopefully). (Tim)
           Updated README.instruments. 
         * Feature: Piano KB and drum list show coloured dots when per-pitch controllers exist or have data. (Tim)
03.11.2012:
         * Improved: Instrument Editor (controller tab): Redesigned. Fixed MANY bugs. Should be SOLID now. (Tim)
           Two new columns: "Show in midi tracks" and "Show in drum tracks".
         * Improved: Midi controller graph 'Ctrl' popup menus now unified (cascading). (Tim)
           'Edit Instrument' menu item now takes you right to the instrument and controllers tab.
         * Feature request: Aftertouch and PolyAftertouch (channel/key pressure) are true MusE controllers now. (Tim)
           Now FULLY supported in controller graphs AND in the improved Instrument Editor / Definition Files.
         - Midi controller stuff: Fixed some bugs, added some methods and improvements.
28.10.2012: