@@ -115,6 +115,7 @@ bool loadDSSI = true;
 bool usePythonBridge = false;
 bool useLASH = true;
 bool useAlsaWithJack = false;
+bool noAutoStartJack = false;
 
 const char* midi_file_pattern[] = {
       QT_TRANSLATE_NOOP("file_patterns", "Midi/Kar (*.mid *.MID *.kar *.KAR *.mid.gz *.mid.bz2)"),
