@@ -85,6 +85,7 @@ extern bool loadDSSI;
 extern bool usePythonBridge;
 extern bool useLASH;
 extern bool useAlsaWithJack;
+extern bool noAutoStartJack;
 
 extern bool realTimeScheduling;
 extern int realTimePriority;
